# ladallm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pylint.yml
docs/: README.md  _feature_template.md  architecture_v0.md  architecture_v1.md  architecture_v2.md  architecture_v3.md  architecture_v4.md  backend_abstraction.md
docs/perf/: README.md
docs/tutorial/: README.md  v0-build-it-yourself.md
docs/v0/: README.md  f01-weight-loading.md  f02-rmsnorm.md  f03-rope.md  f04-attention.md  f05-swiglu-mlp.md  f07-kv-cache.md
docs/v1/: README.md
docs/v2/: README.md
docs/v3/: README.md
docs/v4/: README.md
src/ladallm/: __main__.py  attention.py  cli.py  kvcache.py  mlp.py  model.py  rope.py  safetensors.py
tests/: conftest.py  test_attention.py  test_kvcache.py  test_mlp.py  test_model.py  test_rmsnorm.py  test_rope.py  test_safetensors.py
