[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ladallm"
version = "0.0.1"
description = "LadaLLM - Learning AI inference from scratch"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "ml_dtypes>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "pylint>=3.0.0",
]

[project.scripts]
ladallm = "ladallm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ladallm"]

[tool.pylint.main]
ignore-patterns = ["^\\."]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0801",  # duplicate-code (common in tests)
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ladallm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
